test/test028.interpret.error
test/test028.test:1:0: error: unknown type Tata
Tata tata()
^

test/test028.test:1:0: error: invalid function declaration
Tata tata()
^

7
